Field Hunt/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <description>Formula field that displays the Category of the Account for the contact associated with this campaign member.</description>
        <formula>TEXT(Contact.Account.gf_sf__Funder_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that displays the Category of the Account for the contact associated with this campaign member.</inlineHelpText>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Badge_First_Name__c</fullName>
        <description>This is the custom badge information entered by the user on the website when they registered.</description>
        <inlineHelpText>This is the custom badge information entered by the user on the website when they registered.</inlineHelpText>
        <label>Custom Badge First Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Badge_Last_Name__c</fullName>
        <description>This is the custom badge information entered by the user on the website when they registered.</description>
        <inlineHelpText>This is the custom badge information entered by the user on the website when they registered.</inlineHelpText>
        <label>Custom Badge Last Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Badge_Organization__c</fullName>
        <description>This is the custom badge information entered by the user on the website when they registered.</description>
        <inlineHelpText>This is the custom badge information entered by the user on the website when they registered.</inlineHelpText>
        <label>Custom Badge Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMPak_Registration_Type__c</fullName>
        <label>IMPak Registration Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Status__c</fullName>
        <description>Updated by Process Builder with Membership Status of Campaign Member&apos;s Organization Affiliation at the time of Event Registration.</description>
        <inlineHelpText>DO NOT EDIT. Updated by Process Builder with Membership Status of Campaign Member&apos;s Organization Affiliation at the time of Event Registration.</inlineHelpText>
        <label>Membership Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Legacy_ID__c</fullName>
        <description>This is the Invoice ID from our old database.</description>
        <inlineHelpText>This is the Invoice ID from our old database.</inlineHelpText>
        <label>Opportunity Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <description>Displays the Special Needs field from the contact record on the Campaign Member Record for easy viewing and reporting.</description>
        <formula>Contact.gf_sf__Special_Needs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Special Needs field from the contact record on the Campaign Member Record for easy viewing and reporting.</inlineHelpText>
        <label>Special Needs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Registration_Type__c</fullName>
        <description>This is a special type of registration, to be selected if the registrant falls into one of these categories.</description>
        <inlineHelpText>Select the correct category. If they don&apos;t fall under any of these, then leave blank.</inlineHelpText>
        <label>Special Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_From_Campaign__c</fullName>
        <description>This is the date portion of the Start Date and Time field from the Campaign.</description>
        <formula>DATEVALUE(Campaign.gf_sf__Start_Date_and_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the date portion of the Start Date and Time field from the Campaign.</inlineHelpText>
        <label>Start Date From Campaign</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Order_ID__c</fullName>
        <inlineHelpText>This is the order id from Drupal associated with this campaign member</inlineHelpText>
        <label>Drupal Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Choice__c</fullName>
        <label>Event Choice</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Notes__c</fullName>
        <inlineHelpText>Open field for general information not stored elsewhere</inlineHelpText>
        <label>Event Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Product__c</fullName>
        <inlineHelpText>The product that was selected.</inlineHelpText>
        <label>Event Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__Fee_formula__c</fullName>
        <formula>if(  gf_sf__Opportunity__c  &lt;&gt; null,  gf_sf__Opportunity__r.Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee (deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gf_sf__Meal_Choice__c</fullName>
        <inlineHelpText>Meal choice selections</inlineHelpText>
        <label>Meal Choice</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gf_sf__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Event Registrations</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Paid__c</fullName>
        <label>Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Paid_formula__c</fullName>
        <formula>if(  gf_sf__Opportunity__r.IsWon =TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid (deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Product_SKU__c</fullName>
        <inlineHelpText>Captures the product SKU of the product selected in Drupal</inlineHelpText>
        <label>Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Registration_Type__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Restrictions__c</fullName>
        <inlineHelpText>Dietary or physical limitations, etc.</inlineHelpText>
        <label>Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>gf_sf__General</fullName>
        <active>true</active>
        <description>To be used for tracking all members of General campaigns</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__Mailing_Recipient</fullName>
        <active>true</active>
        <description>To be used for tracking recipients on a mailing list</description>
        <label>Mailing Recipient</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__Participant</fullName>
        <active>true</active>
        <description>To be used in conjunction with campaigns that are events or meetings</description>
        <label>Participant</label>
    </recordTypes>
</CustomObject>